apps/influxdb/explorer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-explorer
spec:
  strategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: influxdb-explorer
      containers:
        - name: influxdb-explorer
          image: influxdata/influxdb3-ui:1.11.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1500
            runAsGroup: 1500
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: db
              mountPath: /db
      volumes:
        - name: nginx-config
          configMap:
            name: influxdb-explorer-nginx-config
        - name: db
          emptyDir: {}
