apps/influxdb/explorer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-explorer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
